# Geometry-Jest

./: .gitignore  README.md
.github/workflows/: deploy.yml  node.js.yml  react.yml  rust.yml
frontend/: install_and_build.sh  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  index.css  index.js
frontend/src/component/: Bet.js  Credits.js  HighScore.js  QuestionBox.js  Register.js  Score.js  SlotMachine.js  Switch.css  Timer.js
frontend/src/static/: 16988_1461335349.mp3:Zone.Identifier  clickSubmitScore.mp3:Zone.Identifier  spinning.mp3:Zone.Identifier
server/: .env.example  Cargo.toml  Rocket.toml
server/migrations/2022-03-27-221640_users/: up.sql
server/src/: main.rs
server/src/api/: mod.rs
server/src/api/v1/handlers/: anscheck.rs  landing.rs  login.rs  mod.rs  register.rs  updatescore.rs
server/src/controllers/: mod.rs  users.rs
server/src/models/: mod.rs  models.rs  schema.rs
server/src/tools/: .establish.rs.swp  config.rs  createsalt.rs  establish.rs  gentoken.rs  hashstring.rs  mod.rs
