[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_cors = "0.6.0-alpha1"
rocket_contrib = "0.4.10"

diesel = { version = "1.4.8", features = ["mysql"] }

dotenv = "0.15.0"
env_logger = "0.9.0"

serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
